<resources>
    <string name="app_name">Movies2 Mobile</string>
    <string name="title_movies">Movies</string>
    <string name="title_concerts">Concerts</string>
    <string name="title_actors">Actors</string>
    <string name="title_settings">Settings</string>
    <string name="search">Search</string>
    <string name="select_movie_data">Select Movie Data File</string>
    <string name="close">CLOSE</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="title">Title</string>
    <string name="release_year">Release Year</string>
    <string name="date_added">Date Added</string>
</resources>