<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/miSearch"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView">
    </item>
    <item
        android:id="@+id/miFilter"
        android:icon="@drawable/ic_filter_outline_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/filter">
        <menu>
        </menu>
    </item>
    <item
        android:id="@+id/miSort"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/sort">
        <menu>
            <item
                android:id="@+id/miTitle"
                app:showAsAction="ifRoom"
                android:title="@string/title"
                android:titleCondensed="Title">
            </item>
            <item
                android:id="@+id/miReleaseYear"
                app:showAsAction="ifRoom"
                android:title="@string/release_year"
                android:titleCondensed="ReleaseYear">
            </item>
            <item
                android:id="@+id/miDateAdded"
                app:showAsAction="ifRoom"
                android:title="@string/date_added"
                android:titleCondensed="DateAdded">
            </item>
        </menu>
    </item>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/title_settings"
        app:showAsAction="never"/>
</menu>