<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.example.movies2mobile.ui.movies.MovieFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_concerts"
        android:name="com.example.movies2mobile.ui.concerts.ConcertFragment"
        android:label="@string/title_concerts"
        tools:layout="@layout/fragment_concerts" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.movies2mobile.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>